fix: wallet template to use Java 17, set java.library.path